--- a/internship.html
+++ b/internship.html
@@ -53,7 +53,7 @@
 <p><span class="badge badge-light">Berlin, DE</span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/wayfair/jobs/4315485002'>Job Application for Internship in IT Support at Wayfair</a></h5> 
+<h5><a href='https://boards.greenhouse.io/wayfair/jobs/4315485002'>Job Application for Internship in IT Support at Wayfair</a></h5> 
 <p><span class="badge badge-light">Berlin, DE</span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
@@ -139,7 +139,7 @@
 <p><span class="badge badge-light">Singapore Malaysia Philippines Hong Kong Taiwan</span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://zalora.applytojob.com/apply/DyAKF6FC4O/Intern-Vendor-Management'>Intern - Vendor Management - ZALORA SEA - Career Page</a></h5> 
+<h5><a href='http://zalora.applytojob.com/apply/DyAKF6FC4O/Intern-Vendor-Management'>Intern - Vendor Management - ZALORA SEA - Career Page</a></h5> 
 <p><span class="badge badge-light">Singapore Malaysia Philippines Hong Kong Taiwan</span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
@@ -155,7 +155,7 @@
 <p><span class="badge badge-light">Atlanta</span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
-<h5><a href='https://close2real.join.com/jobs/264837-kardiologe-internist-mit-klinikerfahrung-fuer-berlin-oder-halle-m-w-d'>Job @ close2real (Berlin): Kardiologe/Internist mi... | JOIN</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://close2real.join.com/jobs/264837-kardiologe-internist-mit-klinikerfahrung-fuer-berlin-oder-halle-m-w-d'>Job @ close2real (Berlin): Kardiologe/Internist mi... | JOIN</a></h5> 
 <p><span class="badge badge-light">Berlin Berlin Berlin, Germany</span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
@@ -207,7 +207,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/eidosmontreal/job/oCvCafwD'>Eidos Montr?al Careers - Stagiaire en ressources humaines / Human Resources intern</a></h5> 
+<h5><a href='https://jobs.jobvite.com/eidosmontreal/job/oCvCafwD'>Eidos Montr?al Careers - Stagiaire en ressources humaines / Human Resources intern</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
@@ -235,7 +235,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/BYond/743999692325746-data-scientist-developer-intern'>B.Yond Data Scientist Developer - Intern | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/BYond/743999692325746-data-scientist-developer-intern'>B.Yond Data Scientist Developer - Intern | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
@@ -244,6 +244,12 @@
     </a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-26</p>
+<hr/>
+<h5><a href='https://boards.greenhouse.io/virtu/jobs/4367942002'>Job Application for Summer Internship - Trading Systems Developer ...</a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>4 days ago ... This is a rare opportunity for students to learn first hand how to design and 
+architect a trading system for scale and to support the massive amounts of data 
+that?...</p>
 <hr/>
 <h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qHO9Vfwj&k=Job&j=olF19fwU&__jvst=Employee&__jvsd=sep77gwC&__jvsc=Twitter&bid=nYwPUKws'>Schneider Electric NAM Careers - Software Programmer Fall Internship</a></h5> 
 <p><span class="badge badge-light"></span></p>
@@ -319,7 +325,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-25</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/sobump/dd53b1f5-1fd4-4e24-a383-77eb81ed3139'>BUMP - Growth Ops Intern</a></h5> 
+<h5><a href='https://jobs.lever.co/sobump/dd53b1f5-1fd4-4e24-a383-77eb81ed3139'>BUMP - Growth Ops Intern</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-25</p>
 <hr/>
@@ -447,7 +453,7 @@ learning?...</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-25</p>
 <hr/>
-<h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qxkaVfwG&k=Job&j=oPnCafwI&__jvst=Employee&__jvsd=sjkAHgwF&__jvsc=Twitter&bid=nkrHTKwA&jvi=oPnCafwI,Job&jvk=Job'>Schneider Electric - Spain Careers - Internship in Computational Linguistics</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qxkaVfwG&k=Job&j=oPnCafwI&__jvst=Employee&__jvsd=sjkAHgwF&__jvsc=Twitter&bid=nkrHTKwA&jvi=oPnCafwI,Job&jvk=Job'>Schneider Electric - Spain Careers - Internship in Computational Linguistics</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-07-25</p>
 <hr/>
@@ -474,11 +480,6 @@ learning?...</p>
 <h5><a href='http://launchmetrics.applytojob.com/apply/KzJnY0CMdP/Digital-Marketing-SEO-Content-Native-French-Internship'>Digital Marketing / SEO Content (Native French Internship) - Launchmetrics - Career Page</a></h5> 
 <p><span class="badge badge-light">NYC Paris London Milan Los Angeles Tokyo Madrid</span></p>
 <p>Posted on: 2019-07-25</p>
-<hr/>
-<h5><a href='https://infarm.join.com/jobs/258845-product-management-intern-m-w-d-berlin'>Job @ infarm (Berlin): Product Management Intern (... | JOIN</a></h5> 
-<p><span class="badge badge-light"></span></p>
-<p>Jul 17, 2019 ... I agree with the JOIN Terms & Conditions and Data Privacy Policy. APPLY FOR 
-THIS JOB. Already applied? Check the status of your application. Share this job:.</p>
 <hr/>
 
 
