--- a/data-analyst.html
+++ b/data-analyst.html
@@ -186,7 +186,7 @@ time?...</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-25</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/PSICRO/743999692163016-senior-statistician'>PSI CRO Senior Statistician | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/PSICRO/743999692163016-senior-statistician'>PSI CRO Senior Statistician | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-25</p>
 <hr/>
@@ -194,7 +194,7 @@ time?...</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-25</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/PublicisGroupe/743999692244858-senior-analyst-data-and-analysis'>Publicis Groupe Senior Analyst, Data and Analysis | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/PublicisGroupe/743999692244858-senior-analyst-data-and-analysis'>Publicis Groupe Senior Analyst, Data and Analysis | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">New York, NY</span></p>
 <p>Posted on: 2019-07-25</p>
 <hr/>
@@ -212,7 +212,7 @@ team regarding statistical methods for data analysis of clinical trials. Provide
 <p>4 days ago ... Provide input into Case Report Form (CRF) and Data Validation Specifications (
 DVS) development in all therapeutic areas; writing specifications for analysis?...</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/Octopus1/743999692295981-data-analyst'>Octopus Data Analyst | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/Octopus1/743999692295981-data-analyst'>Octopus Data Analyst | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">London</span></p>
 <p>Posted on: 2019-07-25</p>
 <hr/>
@@ -243,7 +243,7 @@ data?...</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-25</p>
 <hr/>
-<h5><a href='https://jobs.jobvite.com/advanced-technology-services-mexico/job/oVMwafw7'>Advanced Technology Services, Mexico carreras - Data Analyst</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/advanced-technology-services-mexico/job/oVMwafw7'>Advanced Technology Services, Mexico carreras - Data Analyst</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Hace 2 d?as ... Data Analyst. Maintenance and Repair Monterrey, Nuevo Le?n. Apply. 
 Descripci?n. Advanced Technology Services (ATS) grew out of the need for 
@@ -347,7 +347,7 @@ Stuart.</p>
 <p><span class="badge badge-light">San Mateo, CA</span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
-<h5><a href='https://comtravo.join.com/jobs/251277-data-bi-analyst-f-m-x'>Job @ Comtravo (Berlin): Data / BI Analyst (f/m/x) | JOIN</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://comtravo.join.com/jobs/251277-data-bi-analyst-f-m-x'>Job @ Comtravo (Berlin): Data / BI Analyst (f/m/x) | JOIN</a></h5> 
 <p><span class="badge badge-light">Berlin Berlin, Germany</span></p>
 <p>Posted on: 2019-04-05</p>
 <hr/>
@@ -355,7 +355,7 @@ Stuart.</p>
 <p><span class="badge badge-light">New York, United States</span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/hotstar/5ec7e5d9-0711-45a7-aeb0-25142da3c51d/apply'>Hotstar - Data Analyst</a></h5> 
+<h5><a href='https://jobs.lever.co/hotstar/5ec7e5d9-0711-45a7-aeb0-25142da3c51d/apply'>Hotstar - Data Analyst</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Jul 14, 2019 ... Data Analyst. Mumbai, Maharashtra. 3. Ad Sales ? Sales. Full time. Submit your 
 application. LinkedIn profile. Loading. Apply with Linkedin. Profile added.</p>
@@ -370,7 +370,7 @@ Submit your application. Resume/CV ?. ATTACH RESUME/CV. Couldn't?...</p>
 <p>5 days ago ... U.Group is an Advanced Technology and Creative Design company launched in 
 2019 after combining the data and domain expertise of ByteCubed with the?...</p>
 <hr/>
-<h5><a href='https://jobs.lever.co/o2ebrands/4c7a2625-ba87-42d5-9c13-c46b0594e102/apply'>O2E Brands - Data Analyst - O2E Brands</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/o2ebrands/4c7a2625-ba87-42d5-9c13-c46b0594e102/apply'>O2E Brands - Data Analyst - O2E Brands</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>4 days ago ... Data Analyst - O2E Brands. Vancouver, BC. Technology. Full-time. Submit your 
 application. LinkedIn profile. Loading. Apply with Linkedin. Profile added.</p>
@@ -392,7 +392,7 @@ from Ironclad Technology Services would breach or violate any non-compete?...</p
 <p><span class="badge badge-light">London</span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://aginic.workable.com/j/413452536A'>Aginic - Jobs: Data Analyst (Brisbane) - Apply online</a></h5> 
+<h5><a href='https://aginic.workable.com/j/413452536A'>Aginic - Jobs: Data Analyst (Brisbane) - Apply online</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
@@ -400,7 +400,7 @@ from Ironclad Technology Services would breach or violate any non-compete?...</p
 <p><span class="badge badge-light">Sydney Sydney Sydney Sydney</span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
-<h5><a href='https://aginic.workable.com/j/E9C127977B'>Aginic - Jobs: Graduate Data Analyst (Canberra) - Apply online</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://aginic.workable.com/j/E9C127977B'>Aginic - Jobs: Graduate Data Analyst (Canberra) - Apply online</a></h5> 
 <p><span class="badge badge-light">Canberra Canberra Canberra Canberra</span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
@@ -424,7 +424,7 @@ from Ironclad Technology Services would breach or violate any non-compete?...</p
 <p><span class="badge badge-light">Redwood City, CARedwood City, CA</span></p>
 <p>Posted on: 2019-07-23</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/quotient/job/oF6Cafwh'>Quotient Technology Inc. Careers - Data Analyst</a></h5> 
+<h5><a href='https://jobs.jobvite.com/quotient/job/oF6Cafwh'>Quotient Technology Inc. Careers - Data Analyst</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-23</p>
 <hr/>
@@ -451,11 +451,11 @@ not subject you to adverse treatment). Our company values diversity.</p>
 <p><span class="badge badge-light">Munich Munich London</span></p>
 <p>Posted on: 2019-07-23</p>
 <hr/>
-<h5><a href='https://datatonic.workable.com/j/A5CF0608D6'>Datatonic - Jobs: BI Analyst - Apply online</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://datatonic.workable.com/j/A5CF0608D6'>Datatonic - Jobs: BI Analyst - Apply online</a></h5> 
 <p><span class="badge badge-light">London, England, United Kingdom London</span></p>
 <p>Posted on: 2019-07-23</p>
 <hr/>
-<h5><a href='https://datatonic.workable.com/j/EA28F2A1FE'>Datatonic - Jobs: BI Analyst - Apply online</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://datatonic.workable.com/j/EA28F2A1FE'>Datatonic - Jobs: BI Analyst - Apply online</a></h5> 
 <p><span class="badge badge-light">Stockholm Stockholm Stockholm London</span></p>
 <p>Posted on: 2019-07-23</p>
 <hr/>
